--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -70,7 +70,7 @@
                     Edit
                   </button>
                   <button
-                    class="btn btn-sm btn-danger ml-2"
+                    class="btn btn-sm btn-danger second-btn"
                     (click)="onDelete(category.id)"
                   >
                     Delete
