--- a/src/app/posts/all-post/all-post.component.html
+++ b/src/app/posts/all-post/all-post.component.html
@@ -40,10 +40,10 @@
                                 <td>{{post.data.createdAt.toMillis() | date}}</td>
                                 <td>
                                     <button class="btn btn-sm btn-warning" routerLink="/posts/new" [queryParams]="{id: post.id}">Edit</button>
-                                    <button class="btn btn-sm btn-danger ml-2" (click)="onDelete(post.data.postImg, post.id)">Delete</button>
+                                    <button class="btn btn-sm btn-danger btn-margin" (click)="onDelete(post.data.postImg, post.id)">Delete</button>
 
-                                    <button *ngIf="!post.data.isFeatured" class="btn btn-sm btn-success ml-2" (click)="onFeatured(post.id, true)">Mark Featured</button>
-                                    <button *ngIf="post.data.isFeatured" class="btn btn-sm btn-info ml-2" (click)="onFeatured(post.id, false)">Remove Featured</button>
+                                    <button *ngIf="!post.data.isFeatured" class="btn btn-sm btn-success btn-margin" (click)="onFeatured(post.id, true)">Mark Featured</button>
+                                    <button *ngIf="post.data.isFeatured" class="btn btn-sm btn-info btn-margin" (click)="onFeatured(post.id, false)">Remove Featured</button>
                                 </td>
                             </tr>
                         </tbody>
